static/css/base.css
html {
  height: 100%;
}

body {
  height: calc(100vh - 164px);
  color: #555;
  font-family: 'Raleway', sans-serif;
}

.jumbotron-bg {
  background: url('/media/backgound_flowers.jpg');
  background-size: cover;
  color: white;
  background-position: center center;
  position: relative;
  z-index: -2;
}

/* from Bulma */
.icon {
  align-items: center;
  display: inline-flex;
  justify-content: center;
  height: 1.5rem;
  width: 1.5rem;
}

.logo-font {
  text-transform: uppercase;
  font-size: 1.4rem;
}

.main-logo-link {
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.shop-now-button {
  background: #412025;
  color: white;
  min-width: 260px;
}

.search-now-button,
.btn-rose-gold {
  background: #412025;
  color: white;
}

.btn-outline-rose {
  background: white;
  color: #412025 !important;
  border: 1px solid #412025;
}

.btn-rose-gold:hover,
.btn-rose-gold:active,
.btn-rose-gold:focus,
.search-now-button:hover,
.search-now-button:active,
.search-now-button:focus,
.shop-now-button:hover,
.shop-now-button:active,
.shop-now-button:focus,
.btn-black:hover,
.btn-black:active,
.btn-black:focus {
  background: #b76e79;
  color: white;
}

a.nav-link {
  color: #412025 !important;
  font-weight: 600;
}

.text-rose-g {
  color: #412025 !important;
}

.nav-link:hover,
.nav-link:active,
.nav-link:focus {
  color: #b76e79 !important;
}

.footer-text-title,
.footer-link,
.text-rose-gold,
a.text-rose-gold {
  font-weight: 500;
  color: #412025 !important;
}

.border-rose-gold {
  border: 1px solid #412025 !important;
}

.bg-pink {
  background: #f8cae1 !important;
}

.bg-main-nav-dropdown {
  background: #f8f1f2 !important;
}

.bg-delivery-banner {
  background: #86434d !important;
}

.bg-overlay {
  height: 100%;
  width: 100%;
  top: 0;
  left: 0;
  position: fixed;
  background: white;
  z-index: -1;
}

.overlay {
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  background-color: rgba(255, 255, 255, 0.541);
  overflow: hidden;
  width: 100%;
  height: 0;
  transition: 0.5s ease;
}

.card-container:hover .overlay {
  height: 12vh;
}

.card-container {
  /* Add shadows to create the "card" effect */
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
  border: 1px solid rgba(0, 0, 0, 0.125);
  border-radius: 0.25rem;
}

.text {
  color: white;
  font-size: 20px;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  text-align: center;
}

a.category-badge > span.badge:hover {
  background: #b76e79 !important;
  color: #fff !important;
}

.btt-button {
  height: 42px;
  width: 42px;
  position: fixed;
  bottom: 10px;
  right: 10px;
}

.update-link,
.remove-item,
.btt-link {
  cursor: pointer;
}

input[name='q']::-webkit-input-placeholder {
  color: #aab7c4;
}

input[name='q']::-moz-placeholder {
  color: #aab7c4;
}

input[name='q']:-ms-input-placeholder {
  color: #aab7c4;
}

input[name='q']::-ms-input-placeholder {
  color: #aab7c4;
}

input[name='q']::placeholder {
  color: #aab7c4;
}

/* ------------------------------- bootstrap toasts */

.message-container {
  position: fixed;
  top: 72px;
  right: 15px;
  z-index: 99999999999;
}

.custom-toast {
  overflow: visible;
}

.toast-capper {
  height: 2px;
}

/* from CSS-tricks.com: https://css-tricks.com/snippets/css/css-triangle/ */
.arrow-up {
  width: 0;
  height: 0;
  border-left: 4px solid transparent;
  border-right: 4px solid transparent;
  border-bottom: 10px solid black;
  position: absolute;
  top: -10px;
  right: 36px;
}

/* Convenience classes - colors copied from Bootstrap */
.arrow-primary {
  border-bottom-color: #007bff !important;
}

.arrow-secondary {
  border-bottom-color: #6c757d !important;
}

.arrow-success {
  border-bottom-color: #28a745 !important;
}

.arrow-danger {
  border-bottom-color: #dc3545 !important;
}

.arrow-warning {
  border-bottom-color: #ffc107 !important;
}

.arrow-info {
  border-bottom-color: #17a2b8 !important;
}

.arrow-light {
  border-bottom-color: #f8f9fa !important;
}

.arrow-dark {
  border-bottom-color: #343a40 !important;
}

.bag-notification-wrapper {
  height: 100px;
  overflow-x: hidden;
  overflow-y: auto;
}
/* -------------------------------- Media Queries */

/* Slightly larger container on xl screens */
@media (min-width: 1200px) {
  .container {
    max-width: 80%;
  }
}

/* Allauth form formatting */

.allauth-form-inner-content p {
  margin-top: 1.5rem; /* mt-4 */
  color: #6c757d; /* text-secondary */
}

.allauth-form-inner-content input {
  border-color: #000;
  border-radius: 0;
}

.allauth-form-inner-content label:not([for='id_remember']) {
  display: none;
}

.allauth-form-inner-content input::-webkit-input-placeholder {
  color: #aab7c4;
}

.allauth-form-inner-content input::-moz-placeholder {
  color: #aab7c4;
}

.allauth-form-inner-content input:-ms-input-placeholder {
  color: #aab7c4;
}

.allauth-form-inner-content input::-ms-input-placeholder {
  color: #aab7c4;
}

.allauth-form-inner-content input::placeholder {
  color: #aab7c4;
}

.allauth-form-inner-content button,
.allauth-form-inner-content input[type='submit'] {
  /* btn */
  display: inline-block;
  font-weight: 400;
  color: #fff;
  text-align: center;
  vertical-align: middle;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: #000;
  border: 1px solid #000;
  padding: 0.375rem 0.75rem;
  font-size: 1rem;
  line-height: 1.5;
  border-radius: 0;

  /* standard bootstrap btn transitions */
  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out,
    box-shadow 0.15s ease-in-out;
}

.allauth-form-inner-content button:hover,
.allauth-form-inner-content input[type='submit']:hover {
  color: #fff;
  background-color: #222;
  border-color: #222;
}

.allauth-form-inner-content a {
  color: #17a2b8; /* text-info */
}

/* fixed top navbar only on medium and up */
@media (min-width: 360px) {
  .fixed-top-desktop-only {
    position: fixed;
    top: 0;
    right: 0;
    left: 0;
    z-index: 1030;
  }
  .header-container {
    padding-top: 180px;
  }
}

/* Main page footer */
.copy-right-container {
  background-color: #f1f1f1 !important;
}

.footer-link-text:hover,
.footer-link-text:active,
.footer-link-text:focus {
  text-decoration: none;
  color: #2b2a2a;
}

.footer-link-title,
.footer-link-text {
  color: #696868;
}

.copy-right-text {
  margin: 0;
}

/* Index Page */
.offset {
  top: -80px;
}

.transbox {
  background-color: #000;
  opacity: 0.5;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  z-index: -1;
}

span.brand--text,
.brand--text,
p.index-page-text {
  color: #412025 !important;
  font-weight: 500;
}

.card-brand--text {
  color: #412025 !important;
  font-weight: 700;
}

.global-title,
.product-title {
  color: #412025;
  font-weight: 300;
  text-transform: capitalize;
  font-size: 2.5rem;
}

p.product-price {
  color: #412025 !important;
  font-weight: 300;
  text-transform: capitalize;
  font-size: 1.5rem;
}

.product-description-title {
  color: #412025;
  font-weight: 300;
  text-transform: capitalize;
}

/* pad the top a bit when navbar is collapsed on mobile */
@media (max-width: 991px) {
  .header-container {
    padding-top: 180px;
  }

  body {
    height: calc(100vh - 116px);
  }

  .display-4.logo-font.text-black {
    font-size: 2rem;
  }

  .nav-link {
    padding: 0.15rem;
  }

  .nav-link i.fa-lg {
    font-size: 1rem;
  }

  .navbar-toggler {
    padding: 0.6rem 0.6rem;
    font-size: 1rem;
  }

  #delivery-banner h4 {
    font-size: 0.9rem;
  }

  .btn.btn-outline-rose.rounded,
  .btn.btn-black.rounded {
    padding: 0.375rem 0.375rem;
  }

  .btn.btn-outline-rose.rounded.btn-lg,
  .btn.btn-black.rounded.btn-lg {
    padding: 0.375rem 0.375rem;
    font-size: 0.75rem;
  }

  .increment-qty,
  .decrement-qty {
    padding: 0.25rem 0.5rem !important;
  }
}

